--- a/comparadorsamali/src/main/webapp/index.html
+++ b/comparadorsamali/src/main/webapp/index.html
@@ -6,15 +6,17 @@
   </head>
 
   <body>
-    <h1>Hello</h1>
   
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href='/hello'>The servlet</a></td>
-      </tr>
-    </table>
+  	<header>
+  	<h1>COMPARADOR DE PRECIOS </h1>
+  	<h2>Productos de Supermercado</h2>
+  	</header>
+  
+   	<section>
+   	
+   	<textarea name="mensaje" placeholder="Escriba aqu&iacute; una nueva b&uacute;squeda"></textarea>
+  	<input type="button" value="Buscar" id="bot">
+   	
+   	</section>
   </body>
 </html>
