--- a/comparadorsamali/src/main/webapp/index.html
+++ b/comparadorsamali/src/main/webapp/index.html
@@ -10,6 +10,7 @@
   	<header>
   	<h1>COMPARADOR DE PRECIOS </h1>
   	<h2>Productos de Supermercado</h2>
+  	<h3>Alicia y Samia</h3>
   	</header>
   
    	<section>
