--- a/comparadorsamali/src/main/webapp/index.html
+++ b/comparadorsamali/src/main/webapp/index.html
@@ -17,6 +17,8 @@
    	
    	<textarea name="mensaje" placeholder="Escriba aqu&iacute; una nueva b&uacute;squeda"></textarea>
   	<input type="button" value="Buscar" id="bot">
+  	
+  	<a href="/main/java/HelloAppEngine.java">The servlet</a>
    	
    	</section>
   </body>
