--- a/comparadorsamali/src/main/webapp/index.html
+++ b/comparadorsamali/src/main/webapp/index.html
@@ -14,11 +14,10 @@
   	</header>
   
    	<section>
-   	
+   	<form action="hello" method="get">
    	<textarea name="mensaje" placeholder="Escriba aqu&iacute; una nueva b&uacute;squeda"></textarea>
   	<input type="button" value="Buscar" id="bot">
-  	
-  	<a href="/main/java/HelloAppEngine.java">The servlet</a>
+  	</form>
    	
    	</section>
   </body>
